Updating Package Name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "com.deiveex.gameplaytagsystem",
+    "name": "com.deiveex.gameplay-tag-system",
     "version": "1.0.0",
     "displayName": "Gameplay Tag System",
     "description": "A multi-tag system for Unity",
